welcome.lessons.welcome.variables.Variables.scala.error
Variables:3: error: not found: value estSurBaggle
while(!estSurBaggle())
       ^Variables:6: error: value ++ is not a member of Int
	x = x++;
             ^Variables:9: error: not found: value i
while(i != 0)
      ^Variables:12: error: value -- is not a member of Int
	x = x--;
             ^