welcome.lessons.welcome.variables.Variables.scala.code
var x = 0;
while(!estSurBaggle())
{
	avance();
	x = x++;
}
prendBiscuit();
while(i != 0)
{
	recule();
	x = x--;
}
poseBiscuit();